<resources>
    <string name="app_name">FaceMaker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hair">Hair</string>
    <string name="eyes">Eyes</string>
    <string name="skin">Skin</string>
    <string name="random_face">Random face</string>
    <string name="randomface">RandomFace</string>
    <string name="RGB">RGB Values from 0-256</string>
    <string name="Hair">TextView</string>
    <string name="HairLengths">Hair Lengths</string>
    <string name="Custom">Choose what to customize</string>
    <string name="textview">TextView</string>
</resources>